--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HEHEHE</title>
+    <script>
+        let d = new Date();
+        alert("Today's date is " + d);
+    </script>
   </head>
   <body>
     TEST
