--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         let d = new Date();
         alert("Today's date is " + d);
     </script>
+    <style>
+      body {
+        bg-color:pink
+      }
+    </style>
   </head>
   <body>
     TEST
