--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </script>
     <style>
       body {
-        background-color:pink
+        "background-color:pink"
       }
     </style>
   </head>
