--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     </style>
   </head>
   <body>
-    <h1 name="indexText">
-      Will you be my valentimes?
-    </h1>
+    <center>
+       <h1 name="indexText">
+         Will you be my valentimes?
+       </h1>
+    </center>
   </body>
 </html>
