--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <center>
-       <h1 name="indexText">
+       <h1 name="indexTxt">
          Will you be my valentimes?
        </h1>
     </center>
