--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
       body {
         "background-color:pink"
       }
+      .indexTxt{
+        "background-color:pink"
+      }
     </style>
   </head>
   <body>
     <center>
-       <h1 name="indexTxt">
+       <h1 class="indexTxt">
          Will you be my valentimes?
        </h1>
     </center>
