--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <center>
        <h1 class="indexTxt">
-         Will you be my valentimes?
+         Will you be my valentiMes?
        </h1>
     </center>
   </body>
