--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <center>
        <h1 class="indexTxt">
          Will you be my valentiMes?
+         <button name="subject" type="submit" value="HTML">HTML</button>
+         <button name="subject" type="submit" value="CSS">CSS</button>
        </h1>
     </center>
   </body>
