--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <center>
        <h1 class="indexTxt">
          Will you be my valentiMes?
-         <button name="subject" type="submit" value="HTML">HTML</button>
-         <button name="subject" type="submit" value="CSS">CSS</button>
+         <button class="yesBtn" name="subject" type="submit" value="HTML">YES</button>
+         <button name="noBtn" type="submit" value="CSS">NO</button>
        </h1>
     </center>
   </body>
