--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HEHEHE</title>
     <script>
+       $('.yesBtn').click(()=>{
+         console.log('Yes');
        
+       });
     </script>
    
   </head>
