--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <html>
   <head>
-     <style>
-      body {
-        "background-color:pink"
-      }
-      .indexTxt{
-        "background-color:pink"
-      }
-    </style>
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HEHEHE</title>
@@ -17,7 +10,14 @@
        
        });
     </script>
-   
+     <style>
+      body !important {
+        "background-color:pink"
+      }
+      .indexTxt{
+        "background-color:pink"
+      }
+    </style>
   </head>
   <body>
     <center>
