--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <center>
        <h1 class="indexTxt">
-         Will you be my valentiMes?
+         Will you be my valentiMees?
          <button class="yesBtn" name="subject" type="submit" value="HTML">YES</button>
          <button name="noBtn" type="submit" value="CSS">NO</button>
        </h1>
