--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HEHEHE</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js">
-       $('.yesBtn').click(()=>{
+    $(document).ready(function(){
+      $('.yesBtn').click(()=>{
          console.log('Yes');
        
        });
+    });
+       
     </script>
      <style>
       body !important {
