--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         Will you be my valentines?
+        <button id="yesBtn"/>
+        <button id="noBtn"/>
     </body>
 </html>
