--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
     <head>
-        
+        <script>
+            
+        </script>
     </head>
     <body>
         Will you be my valentines?
-        <button id="yesBtn"/>
-        <button id="noBtn"/>
+        <button id="yesBtn" value="YES"/>
+        <button id="noBtn" value="NO"/>
     </body>
 </html>
