--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
     <head>
+        <style>
+            .center{
+                margin: auto;
+  width: 60%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+            }
+        </style>
         <script>
             
         </script>
     </head>
     <body>
-        Will you be my valentines?
+        <div class="center">
+           Will you be my valentines?
         <button id="yesBtn" value="YES"/>
-        <button id="noBtn" value="NO"/>
+        <button id="noBtn" value="NO"/> 
+        </div>
+        
     </body>
 </html>
