--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   width: 60%;
   
   padding: 10px;
-            padding-top:150px
+            padding-top:50vh
             }
         </style>
         <script>
